--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Vedant Tech" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="/public//font//font.css">
     <title>Vedant Tech</title>
   </head>
   <body>
