--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Vedant Tech" />
     <meta name="theme-color" content="#000000" />
+    <link rel="shortcut icon" href="/public//images/vedant.png" type="image/x-icon">
     <link rel="stylesheet" href="/public//font//font.css">
     <title>Vedant Tech</title>
   </head>
